# ouro

./: Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-safety-and-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-agent-loop-basic-tools/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-context-management-resilience/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-tui-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-sub-agent-orchestration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-extended-tools-discovery/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/agent/: agent_loop.rs  context_manager.rs  discovery.rs  logging.rs  mod.rs  sleep.rs  system_prompt.rs  tools.rs  web_fetch.rs  web_search.rs
src/config/: merge.rs  mod.rs  schema.rs
src/exec/: mod.rs  shell.rs
src/orchestration/: background_proc.rs  llm_agent.rs  manager.rs  mod.rs  types.rs
src/safety/: command_filter.rs  defaults.rs  mod.rs  workspace.rs
src/tui/: app_state.rs  event.rs  input.rs  mod.rs  runner.rs  ui.rs
src/tui/tabs/: agent_tab.rs  discoveries_tab.rs  mod.rs
tests/: command_filter_tests.rs  integration_tests.rs  shell_exec_tests.rs  workspace_guard_tests.rs
(+4 files in other folders)
