[package]
name = "ouro"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for shell execution)
tokio = { version = "1", features = ["process", "time", "fs", "rt-multi-thread", "macros"] }

# Command filtering
regex = "1.12"

# Platform paths
directories = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
nix = { version = "0.29", features = ["signal", "process"] }
