[package]
name = "ouro"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM client (Ollama + multi-provider) -- use from Git per user decision
genai = { git = "https://github.com/jeremychone/rust-genai.git", branch = "main" }

# Stream iteration for genai ChatStream
futures = "0.3"

# HTTP client for Ollama health check (also a transitive dep via genai)
reqwest = { version = "0.12", features = ["json"] }

# Timestamps for log filenames and log entries
chrono = "0.4"

# Async runtime (for shell execution + signal handling)
tokio = { version = "1", features = ["process", "time", "fs", "rt-multi-thread", "macros", "io-util", "signal"] }

# Command filtering
regex = "1.12"

# Platform paths
directories = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Structured cancellation for sub-agent hierarchy
tokio-util = "0.7"

# Unique IDs for sub-agents and background processes
uuid = { version = "1", features = ["v4"] }

# TUI rendering
ratatui = { version = "0.30", features = ["crossterm"] }
# crossterm added directly ONLY for "event-stream" feature (EventStream for async keyboard input)
# Must match the version ratatui 0.30 uses internally (0.29) to avoid duplicate types
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"

[dev-dependencies]
tempfile = "3"
